Fixed axis lines not showing

--- a/css/layout.css
+++ b/css/layout.css
@@ -107,7 +107,7 @@ div.tooltip {
 .country {
   fill: #ccc;
   stroke: #fff;
-  stroke-width: 1px;
+  stroke-width: .5px;
   stroke-linejoin: round;
   cursor: pointer;
 }
@@ -150,7 +150,7 @@ path {
 
 
 .active {
-  fill: orange;
+  fill: #DE2D26;
 }
 
 .indicator {
@@ -269,6 +269,7 @@ path {
 .axis line, .axis path {
   fill: none;
   stroke: #000000;
+  stroke-width: 1px;
   shape-rendering: crispEdges;
 }
 
